# quickjs_dart

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  build.sh  build_android.sh  build_cpp.sh  build_ios.sh  build_vm.sh  clean.sh  docker_run.sh  main.dart  main2.dart  mono_pkg.yaml  pubspec.yaml  quickjs.dart
.fvm/: flutter_sdk  fvm_config.json
android/: .gitignore  build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/example/quickjs_dart/: QuickjsDartPlugin.kt
android/src/main/kotlin/com/pocket4d/io/quickjs_dart/: QuickjsDartPlugin.kt
cpp/android/: CMakeLists.txt  build_android.sh
cpp/android/cmd/: android.sh
cpp/ios/: CMakeLists.txt  build_ios.sh
cpp/ios/cmd/: ios_abi_build.sh
cpp/src/: quickjs-ffi-ios.cpp  quickjs-ffi-ios.h  quickjs-ffi.cc  quickjs-ffi.cpp  quickjs-ffi.h  quickjs.cbp
cpp/src/include/: Block.h  dart_api_dl.h
cpp/src/quickjs/: quickjs-atom.h
cpp/vm/: CMakeLists.txt  build_vm.sh
cpp/vm/cmd/: vm.sh
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/debug/: AndroidManifest.xml
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/quickjs_dart_example/: MainActivity.kt
example/android/app/src/main/kotlin/com/pocket4d/io/quickjs_dart_example/: MainActivity.kt
example/android/app/src/profile/: AndroidManifest.xml
example/android/gradle/wrapper/: gradle-wrapper.properties
example/assets/js/: framework.js
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/test/: widget_test.dart
ffi/: ffi.dart
ffi/bindings/: ffi_base.dart  ffi_constant.dart  ffi_util.dart  ffi_value.dart  util.dart
ffi/wrapper/: engine.dart  function.dart  value.dart
ios/: quickjs_dart.podspec
ios/Classes/: QuickjsDartPlugin.h  QuickjsDartPlugin.m  SwiftQuickjsDartPlugin.swift
ios/quickjs.framework/: Info.plist  quickjs
lib/: core.dart  quickjs_dart.dart
lib/bindings/: ffi_base.dart  ffi_constant.dart  ffi_helpers.dart  ffi_util.dart  ffi_value.dart  util.dart
lib/wrapper/: engine.dart  error.dart  function.dart  util.dart  value.dart
native_lib/: CMakeLists.txt  quickjs-ffi.c  quickjs-ffi.cc  quickjs-ffi.h  quickjs.cbp
native_lib/include/: dart_native_api.h
native_lib/include/internal/: dart_api_dl_impl.h
native_lib/quickjs/: quickjs.c
test/: quickjs_dart_test.dart  test.dart  test.js
vm/: libquickjs.dylib
